--- a/thesis/nicepdf_thesis.tex
+++ b/thesis/nicepdf_thesis.tex
@@ -4,6 +4,6 @@
 
 \input{../common/packages.tex}
 \usepackage{color}
-\usepackage[colorlinks=true,citecolor=blue,dvipdfm,breaklinks=true]{hyperref}
+\usepackage[colorlinks=true,citecolor=blue,breaklinks=true]{hyperref}
 
 \input{nice_thesis.tex}
