add example bibliography

--- a/common/definitions.tex
+++ b/common/definitions.tex
@@ -12,8 +12,8 @@
 \DeclareMathOperator{\var}{var}
 \DeclareMathOperator{\const}{constant}
 \DeclareMathOperator{\maxval}{max}
-%\bibliographystyle{plainnat}
-\bibliographystyle{jmb}
+\bibliographystyle{plainnat}
+%\bibliographystyle{jmb}
 
 % change font for captions
 \renewcommand{\captionfont}{\sffamily}
