--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -70,10 +70,9 @@
 {
   \backmatter
 }
-%\def\bibname{References}
-%\tocotherhead{References}
-%\addcontentsline{toc}{chapter}{References}
-%\bibliography{ism}
+\def\bibname{References}
+\addcontentsline{toc}{chapter}{References}
+\bibliography{bibliography}
 \ifthenelse{\boolean{edthesis}}
  {
   \end{singlespace}
